--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,14 +18,14 @@ jobs:
           URL1="https://www.ur-net.go.jp/chintai/kanto/kanagawa/40_2240.html"
           TEXT1="特定の文言1"
           if ! curl -sL "$URL1" | grep -q "$TEXT1"; then
-            echo "・さるびあ第一：$URL1" >> error_message.txt
+            echo "・さるびあ第一: $URL1" >> error_message.txt
           fi
 
           # --- 2つ目のサイトチェック ---
           URL2="https://www.ur-net.go.jp/chintai/kanto/kanagawa/40_2250.html"
-          TEXT2="ご案内できるお部屋がございません"
+          TEXT2="ご案内できお部屋がございません"
           if ! curl -sL "$URL2" | grep -q "$TEXT2"; then
-            echo "・さるびあ第二：$URL2" >> error_message.txt
+            echo "・さるびあ第二（$URL2）" >> error_message.txt
           fi
 
           # 結果の判定とGitHub出力への書き込み
