--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,7 @@
 name: Check Website Text
 on:
   schedule:
-    - cron: '3,8,13,18,23,28,33,38,43,48,53,58 * * * *'
+    - cron: '3,8,13,18,23,28,33,38,43,48,53,58 23,0-10 * * *'
   workflow_dispatch:
 
 jobs:
@@ -11,7 +11,7 @@ jobs:
       - name: Check multiple websites
         id: check_step
         run: |
-          # エラーメッセージを一時保存するファイルを作成23,0-10
+          # エラーメッセージを一時保存するファイルを作成
           touch error_message.txt
 
           # --- 1つ目のサイトチェック ---
