--- a/.github/workflows/check_by_cron_job.yml
+++ b/.github/workflows/check_by_cron_job.yml
@@ -19,7 +19,7 @@ jobs:
 
           # --- 1つ目のサイトチェック ---
           URL1="https://www.ur-net.go.jp/chintai/kanto/kanagawa/40_2240.html"
-          TEXT1="ご案内できるuお部屋がございません"
+          TEXT1="ご案内できるお部屋がございません"
           if ! curl -sL "$URL1" | grep -q "$TEXT1"; then
             echo "・さるびあ第一 ($URL1)" >> error_message.txt
           fi
