--- a/.github/workflows/check_by_schedule.yml
+++ b/.github/workflows/check_by_schedule.yml
@@ -1,7 +1,7 @@
 name: Check By schedule
 on:
   schedule:
-    - cron: '3,13,23,33,43,53 23,0-10 * * *'
+    - cron: '3,13,23,33,43,53 23,0-10 1 1 *'
   workflow_dispatch:
 
 jobs:
